tests/auto/corelib/xml/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P49/ibm49i01.dtd
<!ELEMENT a EMPTY>
<!ELEMENT b (#PCDATA|c)* >
<!ELEMENT c ANY>

<!--* open and close parenthesis are in different PE replace Texts *-->
<!ENTITY % choice1 "(a|b">
<!ENTITY % choice2 "|c)">
<!ELEMENT child1 %choice1;%choice2; >



